; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_necp_client_add_agent_interface_options.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_necp_client_add_agent_interface_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.necp_client = type { i32 }
%struct.necp_client_parsed_parameters = type { i32 }
%struct.TYPE_4__ = type { i64, i32, i32* }

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.necp_client*, %struct.necp_client_parsed_parameters*, %struct.TYPE_4__*)* @necp_client_add_agent_interface_options to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @necp_client_add_agent_interface_options(%struct.necp_client* %0, %struct.necp_client_parsed_parameters* %1, %struct.TYPE_4__* %2) #0 {
  %4 = alloca %struct.necp_client*, align 8
  %5 = alloca %struct.necp_client_parsed_parameters*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i64, align 8
  store %struct.necp_client* %0, %struct.necp_client** %4, align 8
  store %struct.necp_client_parsed_parameters* %1, %struct.necp_client_parsed_parameters** %5, align 8
  store %struct.TYPE_4__* %2, %struct.TYPE_4__** %6, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %9 = icmp ne %struct.TYPE_4__* %8, null
  br i1 %9, label %10, label %51

10:                                               ; preds = %3
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 2
  %13 = load i32*, i32** %12, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %51

15:                                               ; preds = %10
  store i64 0, i64* %7, align 8
  br label %16

16:                                               ; preds = %47, %15
  %17 = load i64, i64* %7, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp ult i64 %17, %20
  br i1 %21, label %22, label %50

22:                                               ; preds = %16
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 2
  %25 = load i32*, i32** %24, align 8
  %26 = load i64, i64* %7, align 8
  %27 = getelementptr inbounds i32, i32* %25, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = call i64 @uuid_is_null(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %22
  br label %47

32:                                               ; preds = %22
  %33 = load %struct.necp_client*, %struct.necp_client** %4, align 8
  %34 = load %struct.necp_client_parsed_parameters*, %struct.necp_client_parsed_parameters** %5, align 8
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 2
  %37 = load i32*, i32** %36, align 8
  %38 = load i64, i64* %7, align 8
  %39 = getelementptr inbounds i32, i32* %37, i64 %38
  %40 = load i32, i32* @TRUE, align 4
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 8
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %45 = call i32 @ifnet_get_generation(%struct.TYPE_4__* %44)
  %46 = call i32 @necp_netagent_applies_to_client(%struct.necp_client* %33, %struct.necp_client_parsed_parameters* %34, i32* %39, i32 %40, i32 %43, i32 %45)
  br label %47

47:                                               ; preds = %32, %31
  %48 = load i64, i64* %7, align 8
  %49 = add i64 %48, 1
  store i64 %49, i64* %7, align 8
  br label %16

50:                                               ; preds = %16
  br label %51

51:                                               ; preds = %50, %10, %3
  ret void
}

declare dso_local i64 @uuid_is_null(i32) #1

declare dso_local i32 @necp_netagent_applies_to_client(%struct.necp_client*, %struct.necp_client_parsed_parameters*, i32*, i32, i32, i32) #1

declare dso_local i32 @ifnet_get_generation(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
